# mateEZ

./: README.md  map.yaml
SLAM/: map.pgm
launch_ws/install/: local_setup.sh  setup.sh
launch_ws/log/: latest_build
launch_ws/src/install/: local_setup.sh  setup.sh
launch_ws/src/launch_tutorial/: setup.py
launch_ws/src/log/: latest_build
launch_ws/src/py_launch_example/: package.xml  setup.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build  latest_test
ros2_ws/src/install/: local_setup.sh  setup.sh
ros2_ws/src/log/: latest_build
ros2_ws/src/more_interfaces/: CMakeLists.txt
ros2_ws/src/py_pubsub/: setup.py
ros2_ws/src/py_pubsub/py_pubsub/: publisher_member_function.py
ros2_ws/src/py_srvcli/: setup.py
ros2_ws/src/python_parameters/: setup.py
ros2_ws/src/tutorial_interfaces/: setup.cfg
scripts/: setup.sh
scripts/Beginner:CLI-tools/: actions.sh  nodes.sh  parameters.sh  services.sh  topics.sh  turtlesim.sh
scripts/Beginner:Client-libraries/: colcon.sh  creating_workspace.sh  custom_interfaces.sh  custom_msg_srv_files.sh  parameters_in_class.sh  publisher_and_subscriber.sh  service_and_client.sh
vip1_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
vip1_ws/install/turtlebot3_safety/share/autonomous_driving/: package.xml
vip1_ws/install/turtlebot3_safety/share/autonomous_driving/launch/: wall_following.launch.py
vip1_ws/log/: latest_build
vip1_ws/src/autonomous_driving/: setup.cfg  setup.py
vip1_ws/src/autonomous_driving/autonomous_driving/: obstacle_avoidance.py  wall_following.py
(+55 files in other folders)
